--- a/team_project/src/index.css
+++ b/team_project/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Leaflet 기본 CSS */
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+}
+
